@@ -73,7 +73,7 @@ namespace OpenBabel
  
     for (i = _bondcalculations.begin(); i != _bondcalculations.end(); ++i) {
 
-      i->Compute<gradients>();
+      i->template Compute<gradients>();
       energy += i->energy;
 
       if (gradients) {
@@ -142,7 +142,7 @@ namespace OpenBabel
     
     for (i = _anglecalculations.begin(); i != _anglecalculations.end(); ++i) {
 
-      i->Compute<gradients>();
+      i->template Compute<gradients>();
       energy += i->energy;
       
       if (gradients) {
@@ -221,7 +221,7 @@ namespace OpenBabel
     
     for (i = _torsioncalculations.begin(); i != _torsioncalculations.end(); ++i) {
 
-      i->Compute<gradients>();
+      i->template Compute<gradients>();
       energy += i->energy;
       
       if (gradients) {
@@ -298,7 +298,7 @@ namespace OpenBabel
         if (!_vdwpairs.BitIsSet(j)) 
           continue;
  
-      i->Compute<gradients>();
+      i->template Compute<gradients>();
       energy += i->energy;
       
       if (gradients) {
@@ -366,7 +366,7 @@ namespace OpenBabel
         if (!_elepairs.BitIsSet(j)) 
           continue;
  
-      i->Compute<gradients>();
+      i->template Compute<gradients>();
       energy += i->energy;
       
       if (gradients) {
